Fixed gifts not showing up as well as CORS issue

--- a/giftlink-frontend/src/App.css
+++ b/giftlink-frontend/src/App.css
@@ -1,4 +1,3 @@
-
 html {
   overflow-y: scroll;
 }
@@ -44,12 +43,13 @@ body,
   color: #28a745; /* Fresh green */
 }
 
-.container {
-  padding: 2rem 15%; /* Adds more space on the sides */
+/* .container {
+  padding: 2rem 15%;
 }
+  */
 
 .row {
-  justify-content: space-around; /* Adds space between cards */
+  justify-content: space-around;
 }
 
 .product-card {
@@ -92,7 +92,6 @@ body,
   border-top-right-radius: 0.25rem;
 }
 
-
 .card-body {
   padding: 1rem;
   flex-grow: 1; /* Make body grow to fill space */
@@ -124,7 +123,8 @@ body,
 }
 
 /* Customize the navbar brand and links */
-.navbar-brand, .nav-link {
+.navbar-brand,
+.nav-link {
   font-size: 1.2rem; /* Increase font size */
   font-weight: 500; /* Medium weight for better visibility */
 }
@@ -149,7 +149,8 @@ body,
 }
 
 /* Highlight the active nav link */
-.nav-item.active .nav-link, .nav-item .nav-link.active {
+.nav-item.active .nav-link,
+.nav-item .nav-link.active {
   color: #d63384; /* A distinct color for the active page */
   background-color: transparent; /* Optional: Adds a background color to the active link */
   text-decoration: underline; /* Underlines the active link */
